--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll --detectOpenHandles",
+    "test": "react-scripts test",
     "test-jest": "jest --watchAll --detectOpenHandles",
     "eject": "react-scripts eject"
   },
