--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     ]
   },
   "devDependencies": {
+    "@zarconontol/enzyme-adapter-react-18": "^0.7.3",
     "autoprefixer": "^10.4.7",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24"
   }
